--- a/DressForWeather.WebAPI/DressForWeather.WebAPI.csproj
+++ b/DressForWeather.WebAPI/DressForWeather.WebAPI.csproj
@@ -13,6 +13,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DressForWeather.DbContextPostgre\DressForWeather.DbContextPostgre.csproj" />
+      <ProjectReference Include="..\DressForWeather.DbContextTemplates\DressForWeather.DbContextTemplates.csproj" />
       <ProjectReference Include="..\DressForWeather.Models\DressForWeather.Models.csproj" />
     </ItemGroup>
 
