--- a/DressForWeather.DbContexts/DressForWeather.DbContexts.csproj
+++ b/DressForWeather.DbContexts/DressForWeather.DbContexts.csproj
@@ -4,12 +4,13 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <AssemblyName>DressForWeather.DbContextTemplates</AssemblyName>
-        <RootNamespace>DressForWeather.DbContextTemplates</RootNamespace>
+        <PackageId>DressForWeather.DbContexts</PackageId>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.7" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.7" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
     </ItemGroup>
 
     <ItemGroup>
