--- a/DressForWeather.Models/DressForWeather.Models.csproj
+++ b/DressForWeather.Models/DressForWeather.Models.csproj
@@ -7,4 +7,8 @@
         <PackageId>DressForWeather.Models</PackageId>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.7" />
+    </ItemGroup>
+
 </Project>
