--- a/DressForWeather.WebAPI/DressForWeather.WebAPI.csproj
+++ b/DressForWeather.WebAPI/DressForWeather.WebAPI.csproj
@@ -7,14 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.7" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.7" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DressForWeather.DbContextPostgre\DressForWeather.DbContextPostgre.csproj" />
-      <ProjectReference Include="..\DressForWeather.DbContextTemplates\DressForWeather.DbContextTemplates.csproj" />
+      <ProjectReference Include="..\DressForWeather.DbContexts\DressForWeather.DbContexts.csproj" />
       <ProjectReference Include="..\DressForWeather.Models\DressForWeather.Models.csproj" />
     </ItemGroup>
 
