--- a/ConsoleTestClient/ConsoleTestClient.csproj
+++ b/ConsoleTestClient/ConsoleTestClient.csproj
@@ -1,10 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <PackageId>DressForWeather.Models</PackageId>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DressForWeather.SharedModels\DressForWeather.SharedModels.csproj" />
+    </ItemGroup>
 
 </Project>
