--- a/DressForWeather.DbContexts/DressForWeather.DbContexts.csproj
+++ b/DressForWeather.DbContexts/DressForWeather.DbContexts.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DressForWeather.EFCoreModels\DressForWeather.EFCoreModels.csproj" />
       <ProjectReference Include="..\DressForWeather.Models\DressForWeather.Models.csproj" />
     </ItemGroup>
 
