--- a/DressForWeather.WebAPI/Properties/launchSettings.json
+++ b/DressForWeather.WebAPI/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7296;http://localhost:5125",
+      "applicationUrl": "https://localhost:7296",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
