--- a/DressForWeather.WebAPI/appsettings.json
+++ b/DressForWeather.WebAPI/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DbProviders": {
+    "WeatherDressContext": "PostgreSql"
+  },
+  "ConnectionStrings": {
+    "PostgreSqlDressForWeather": "Host=localhost;Port=5432;Database=DressForWeather;Username=postgres;Password=1234"
+  }
 }
