рефактор, добавил миграции нормально, теперь работает аутентификация/авторизация

--- a/DressForWeather.WebAPI/appsettings.json
+++ b/DressForWeather.WebAPI/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "DbProviders": {
-    "WeatherDressContext": "PostgreSql"
+    "Main": "Postgre"
   },
   "ConnectionStrings": {
-    "PostgreSqlDressForWeather": "Host=localhost;Port=5432;Database=DressForWeather;Username=postgres;Password=1234"
+    "PostgreMainConnection": "Host=localhost;Port=5432;Database=DressForWeather;Username=postgres;Password=1234"
   }
 }
