--- a/DressForWeather.WebAPI/DressForWeather.WebAPI.csproj
+++ b/DressForWeather.WebAPI/DressForWeather.WebAPI.csproj
@@ -10,13 +10,17 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.7" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.7" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.7">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DressForWeather.DbContexts\DressForWeather.DbContexts.csproj" />
-      <ProjectReference Include="..\DressForWeather.Models\DressForWeather.Models.csproj" />
       <ProjectReference Include="..\DressForWeather.SharedModels\DressForWeather.SharedModels.csproj" />
+      <ProjectReference Include="..\DressForWeather.WebAPI.DbContexts\DressForWeather.WebAPI.DbContexts.csproj" />
+      <ProjectReference Include="..\DressForWeather.WebAPI.PostgreMigrations\DressForWeather.WebAPI.PostgreMigrations.csproj" />
     </ItemGroup>
 
 </Project>
