add authorization wits roles (from config). it's need to make static may be

--- a/DressForWeather.WebAPI/appsettings.json
+++ b/DressForWeather.WebAPI/appsettings.json
@@ -11,5 +11,9 @@
   },
   "ConnectionStrings": {
     "PostgreMainConnection": "Host=localhost;Port=5432;Database=DressForWeather;Username=postgres;Password=1234"
-  }
+  },
+  "Roles": [
+    "newReg", "Admin", "User"
+  ]
+  
 }
