--- a/DressForWeather.WebAPI.BackendModels/DressForWeather.WebAPI.BackendModels.csproj
+++ b/DressForWeather.WebAPI.BackendModels/DressForWeather.WebAPI.BackendModels.csproj
@@ -7,7 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.7" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.7"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\DressForWeather.SharedModels\DressForWeather.SharedModels.csproj"/>
     </ItemGroup>
 
 </Project>
