Улучшения кода, добавил библиотеку юнит-тестов, перенес настройку сервера в Startup.cs

--- a/DressForWeather.WebAPI/appsettings.Development.json
+++ b/DressForWeather.WebAPI/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "DbProviders": {
+    "Main": "Postgre"
+  },
+  "ConnectionStrings": {
+    "PostgreMainConnection": "Host=localhost;Port=5432;Database=DressForWeatherDev;Username=postgres;Password=1234"
   }
 }
