--- a/DressForWeather.WebAPI.Tests/DressForWeather.WebAPI.Tests.csproj
+++ b/DressForWeather.WebAPI.Tests/DressForWeather.WebAPI.Tests.csproj
@@ -7,13 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="7.0.10"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1"/>
-        <PackageReference Include="xunit" Version="2.5.0"/>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.10" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+      <PackageReference Include="xunit" Version="2.5.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\DressForWeather.WebAPI\DressForWeather.WebAPI.csproj"/>
+      <ProjectReference Include="..\DressForWeather.WebAPI\DressForWeather.WebAPI.csproj" />
     </ItemGroup>
 
 </Project>
