много чего поправил/дописал. написаны интеграционные тесты

--- a/DressForWeather.WebAPI.PostgreMigrations/DressForWeather.WebAPI.PostgreMigrations.csproj
+++ b/DressForWeather.WebAPI.PostgreMigrations/DressForWeather.WebAPI.PostgreMigrations.csproj
@@ -8,14 +8,18 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4"/>
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\DressForWeather.WebAPI.DbContexts\DressForWeather.WebAPI.DbContexts.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="Migrations\"/>
     </ItemGroup>
 
 </Project>
