--- a/DressForWeather.WebAPI.BackendModels/DressForWeather.WebAPI.BackendModels.csproj
+++ b/DressForWeather.WebAPI.BackendModels/DressForWeather.WebAPI.BackendModels.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.7"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.10"/>
     </ItemGroup>
 
     <ItemGroup>
